--- a/src/nthmove_gui.ui
+++ b/src/nthmove_gui.ui
@@ -1,148 +1,116 @@
-<!DOCTYPE UI><UI>
-<class>NthMoveDialog</class>
-<widget>
-    <class>QDialog</class>
-    <property stdset="1">
-        <name>name</name>
-        <cstring>NthMoveDialog</cstring>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0" stdsetdef="1">
+  <author></author>
+  <comment></comment>
+  <exportmacro></exportmacro>
+  <class>NthMoveDialog</class>
+  <widget class="QDialog" name="NthMoveDialog">
+    <property name="geometry">
+      <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>210</width>
+        <height>90</height>
+      </rect>
     </property>
-    <property stdset="1">
-        <name>geometry</name>
+    <property name="minimumSize">
+      <size>
+        <width>210</width>
+        <height>90</height>
+      </size>
+    </property>
+    <property name="maximumSize">
+      <size>
+        <width>210</width>
+        <height>90</height>
+      </size>
+    </property>
+    <property name="windowTitle">
+      <string>Move Number</string>
+    </property>
+    <widget class="QPushButton" name="buttonCancel">
+      <property name="geometry">
         <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>210</width>
-            <height>90</height>
+          <x>110</x>
+          <y>50</y>
+          <width>80</width>
+          <height>32</height>
         </rect>
-    </property>
-    <property stdset="1">
-        <name>minimumSize</name>
-        <size>
-            <width>210</width>
-            <height>90</height>
-        </size>
-    </property>
-    <property stdset="1">
-        <name>maximumSize</name>
-        <size>
-            <width>210</width>
-            <height>90</height>
-        </size>
-    </property>
-    <property stdset="1">
-        <name>caption</name>
-        <string>Move Number</string>
-    </property>
-    <widget>
-        <class>QPushButton</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>buttonCancel</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>110</x>
-                <y>50</y>
-                <width>80</width>
-                <height>32</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>&amp;Cancel</string>
-        </property>
-        <property stdset="1">
-            <name>autoDefault</name>
-            <bool>true</bool>
-        </property>
+      </property>
+      <property name="text">
+        <string>&amp;Cancel</string>
+      </property>
+      <property name="autoDefault">
+        <bool>true</bool>
+      </property>
     </widget>
-    <widget>
-        <class>QLabel</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>TextLabel1</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>10</x>
-                <y>10</y>
-                <width>120</width>
-                <height>20</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>Enter move number:</string>
-        </property>
+    <widget class="QLabel" name="TextLabel1">
+      <property name="geometry">
+        <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>120</width>
+          <height>20</height>
+        </rect>
+      </property>
+      <property name="text">
+        <string>Enter move number:</string>
+      </property>
+      <property name="wordWrap">
+        <bool>false</bool>
+      </property>
     </widget>
-    <widget>
-        <class>QPushButton</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>buttonOk</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>20</x>
-                <y>50</y>
-                <width>80</width>
-                <height>32</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>&amp;OK</string>
-        </property>
-        <property stdset="1">
-            <name>autoDefault</name>
-            <bool>true</bool>
-        </property>
-        <property stdset="1">
-            <name>default</name>
-            <bool>true</bool>
-        </property>
+    <widget class="QPushButton" name="buttonOk">
+      <property name="geometry">
+        <rect>
+          <x>20</x>
+          <y>50</y>
+          <width>80</width>
+          <height>32</height>
+        </rect>
+      </property>
+      <property name="text">
+        <string>&amp;OK</string>
+      </property>
+      <property name="autoDefault">
+        <bool>true</bool>
+      </property>
+      <property name="default">
+        <bool>true</bool>
+      </property>
     </widget>
-    <widget>
-        <class>QSpinBox</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>moveSpinBox</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>140</x>
-                <y>10</y>
-                <width>50</width>
-                <height>20</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>maxValue</name>
-            <number>999</number>
-        </property>
+    <widget class="QSpinBox" name="moveSpinBox">
+      <property name="geometry">
+        <rect>
+          <x>140</x>
+          <y>10</y>
+          <width>50</width>
+          <height>20</height>
+        </rect>
+      </property>
+      <property name="maximum">
+        <number>999</number>
+      </property>
     </widget>
-</widget>
-<connections>
-    <connection>
-        <sender>buttonOk</sender>
-        <signal>clicked()</signal>
-        <receiver>NthMoveDialog</receiver>
-        <slot>accept()</slot>
-    </connection>
-    <connection>
-        <sender>buttonCancel</sender>
-        <signal>clicked()</signal>
-        <receiver>NthMoveDialog</receiver>
-        <slot>reject()</slot>
-    </connection>
-</connections>
-<tabstops>
+  </widget>
+  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+  <tabstops>
     <tabstop>moveSpinBox</tabstop>
     <tabstop>buttonOk</tabstop>
     <tabstop>buttonCancel</tabstop>
-</tabstops>
-</UI>
+  </tabstops>
+  <connections>
+    <connection>
+      <sender>buttonOk</sender>
+      <signal>clicked()</signal>
+      <receiver>NthMoveDialog</receiver>
+      <slot>accept()</slot>
+    </connection>
+    <connection>
+      <sender>buttonCancel</sender>
+      <signal>clicked()</signal>
+      <receiver>NthMoveDialog</receiver>
+      <slot>reject()</slot>
+    </connection>
+  </connections>
+</ui>
