--- a/src/mainwidget_gui.ui
+++ b/src/mainwidget_gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>635</width>
-    <height>603</height>
+    <height>672</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -2232,8 +2232,11 @@ N/S	normal/score tools
 E	edit tools
 TG	teach tools / game tree</string>
       </property>
+      <property name="tabPosition">
+       <enum>QTabWidget::South</enum>
+      </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_ns">
        <attribute name="title">
