--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>619</width>
-    <height>662</height>
+    <height>678</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -181,7 +181,7 @@ After placing and/or undo release button for returning to starting point automat
       <string/>
      </property>
      <property name="currentIndex">
-      <number>3</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="InterfaceTabWidget">
       <attribute name="title">
@@ -2828,88 +2828,10 @@ If 'None' is selected, Latin1 encoding will be used, common in western world.
          </layout>
         </widget>
        </item>
-       <item row="2" column="0" colspan="2">
-        <widget class="Q3Frame" name="Frame5">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>32767</width>
-           <height>32767</height>
-          </size>
-         </property>
-         <property name="focusPolicy">
-          <enum>Qt::NoFocus</enum>
-         </property>
-         <property name="toolTip">
-          <string>Request adjournment</string>
-         </property>
-         <property name="whatsThis">
-          <string>Adjourn.
-
-Send adjournment request to your opponent. If he accept it, the game will be adjourned and saved.</string>
-         </property>
-         <property name="frameShape">
-          <enum>QFrame::StyledPanel</enum>
-         </property>
-         <property name="frameShadow">
-          <enum>QFrame::Raised</enum>
-         </property>
-         <layout class="QVBoxLayout">
-          <property name="spacing">
-           <number>6</number>
-          </property>
-          <property name="margin">
-           <number>11</number>
-          </property>
-          <item>
-           <widget class="QCheckBox" name="fastLoadCheckBox">
-            <property name="toolTip">
-             <string>Enable fast loading</string>
-            </property>
-            <property name="whatsThis">
-             <string>Enable fast loading
-
-Warning: This is experimental and does not work properly!</string>
-            </property>
-            <property name="text">
-             <string>Fast loading (EXPERIMENTAL)</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="TextLabel1_2">
-            <property name="frameShape">
-             <enum>QFrame::NoFrame</enum>
-            </property>
-            <property name="frameShadow">
-             <enum>QFrame::Plain</enum>
-            </property>
-            <property name="lineWidth">
-             <number>1</number>
-            </property>
-            <property name="text">
-             <string>Fast loading is experimental right now and does not work completely!</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-            </property>
-            <property name="wordWrap">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item row="3" column="1">
+       <item row="2" column="1">
         <widget class="Q3GroupBox" name="groupBox26">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -3001,7 +2923,7 @@ When toggled on, the last used directory when loading or saving sgf files will b
          </layout>
         </widget>
        </item>
-       <item row="3" column="0" rowspan="2">
+       <item row="2" column="0" rowspan="2">
         <widget class="Q3GroupBox" name="GroupBox4">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -3282,18 +3204,15 @@ When importing or exporting ASCII files, use these characters to indicate the gi
          </layout>
         </widget>
        </item>
-       <item row="4" column="1">
-        <spacer name="spacer10">
+       <item row="4" column="0">
+        <spacer name="verticalSpacer_13">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Expanding</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>0</height>
+           <height>40</height>
           </size>
          </property>
         </spacer>
@@ -5142,7 +5061,6 @@ up to :</string>
   <tabstop>buttonCancel</tabstop>
   <tabstop>rememberDirCheckBox</tabstop>
   <tabstop>codecListBox</tabstop>
-  <tabstop>fastLoadCheckBox</tabstop>
   <tabstop>fontStandardButton</tabstop>
   <tabstop>fontCommentsButton</tabstop>
   <tabstop>fontListsButton</tabstop>
