--- a/src/newgame_gui.ui
+++ b/src/newgame_gui.ui
@@ -30,7 +30,7 @@
         <number>6</number>
       </property>
       <item row="1" column="0">
-        <widget class="Q3Frame" name="Frame14">
+        <widget class="QFrame" name="Frame14">
           <property name="frameShape">
             <enum>QFrame::StyledPanel</enum>
           </property>
@@ -162,7 +162,7 @@
         </widget>
       </item>
       <item row="2" column="0">
-        <widget class="Q3Frame" name="Frame14_2">
+        <widget class="QFrame" name="Frame14_2">
           <property name="frameShape">
             <enum>QFrame::StyledPanel</enum>
           </property>
@@ -354,7 +354,7 @@
         </layout>
       </item>
       <item row="0" column="0">
-        <widget class="Q3Frame" name="Frame13">
+        <widget class="QFrame" name="Frame13">
           <property name="frameShape">
             <enum>QFrame::StyledPanel</enum>
           </property>
