--- a/src/textview_gui.ui
+++ b/src/textview_gui.ui
@@ -24,7 +24,7 @@
         <number>6</number>
       </property>
       <item>
-        <widget class="Q3MultiLineEdit" name="textEdit">
+        <widget class="QTextEdit" name="textEdit">
           <property name="minimumSize">
             <size>
               <width>350</width>
