Convert debug window from Q3TextView.

--- a/src/gui_dialog.ui
+++ b/src/gui_dialog.ui
@@ -24,7 +24,7 @@
         <number>0</number>
       </property>
       <item row="0" column="0">
-        <widget class="Q3TextEdit" name="TextView1">
+        <widget class="QTextEdit" name="TextView1">
           <property name="readOnly">
             <bool>true</bool>
           </property>
